syntax = "proto3";
package grpctest;
option java_package = "com.ydcqy.grpc.service.grpc";
option java_outer_classname = "HelloServiceProtos";
service HelloService {
    rpc sayHi1 (Params) returns (Result);
    rpc sayHi2 (stream Params) returns (Result);
    rpc sayHi3 (Params) returns (stream Result);
    rpc sayHi4 (stream Params) returns (stream Result);
}

message Params {
    string username = 1;
    int32 age = 2;
}
message Result {
    string value = 1;
}